# bevy

./: .gitignore  Cargo.toml  README.md
.helix/: languages.toml
assets/shaders/: animate_shader.wgsl  array_texture.wgsl  custom_material.wgsl  custom_material_chromatic_aberration.wgsl  custom_material_screenspace_texture.wgsl  custom_vertex_attribute.wgsl  game_of_life.wgsl  instancing.wgsl  line_material.wgsl  shader_defs.wgsl
crates/bevy_asset/: Cargo.toml
crates/bevy_audio/: Cargo.toml
crates/bevy_audio/src/: audio.rs  audio_output.rs  lib.rs  sinks.rs
crates/bevy_core_pipeline/: Cargo.toml
crates/bevy_core_pipeline/src/: clear_pass.rs  lib.rs  main_pass_driver.rs
crates/bevy_crevice/src/std140/: sizer.rs
crates/bevy_crevice/src/std430/: sizer.rs
crates/bevy_crevice/tests/snapshots/: test__generate_struct_glsl.snap
crates/bevy_internal/: Cargo.toml
crates/bevy_internal/src/: default_plugins.rs  lib.rs
crates/bevy_log/src/: lib.rs
crates/bevy_mikktspace/examples/: generate.rs
crates/bevy_mikktspace/tests/: regression_test.rs
crates/bevy_openxr/: Cargo.toml
crates/bevy_openxr/src/: camera.rs  conversion.rs  lib.rs  presentation.rs  swapchain.rs  utils.rs
crates/bevy_openxr/src/camera/: mod.rs  xrcameraplugin.rs
crates/bevy_openxr/src/interaction/: mod.rs  tracking.rs
crates/bevy_pbr/: Cargo.toml
crates/bevy_pbr/src/: lib.rs  light.rs
crates/bevy_pbr/src/render/: depth.wgsl  light.rs  mesh.rs  mesh.wgsl  mesh_struct.wgsl  mesh_view_bind_group.wgsl  mesh_view_types.wgsl  pbr.wgsl  pbr_functions.wgsl  skinning.wgsl  wireframe.wgsl
crates/bevy_render/: Cargo.toml
crates/bevy_render/macros/src/: as_bind_group.rs
crates/bevy_render/src/: lib.rs
crates/bevy_render/src/camera/: camera.rs  mod.rs
crates/bevy_render/src/render_resource/: pipeline_cache.rs  shader.rs
crates/bevy_render/src/renderer/: mod.rs
crates/bevy_render/src/texture/: image.rs  mod.rs
crates/bevy_render/src/view/: mod.rs  window.rs
crates/bevy_render/src/view/visibility/: render_layers.rs
crates/bevy_sprite/src/mesh2d/: color_material.wgsl  mesh.rs  mesh2d.wgsl  mesh2d_struct.wgsl  mesh2d_view_bind_group.wgsl
crates/bevy_sprite/src/render/: mod.rs  sprite.wgsl
crates/bevy_ui/src/render/: pipeline.rs  ui.wgsl
crates/bevy_webxr/: Cargo.toml
crates/bevy_webxr/.cargo/: config.toml
crates/bevy_webxr/examples/: webxr.rs
crates/bevy_webxr/src/: conversion.rs  initialization.rs  lib.rs  util.rs  webxr_context.rs
crates/bevy_webxr/src/interaction/: input.rs  mod.rs  tracking.rs  utils.rs
crates/bevy_webxr/src/interaction/profiles/: mod.rs  oculus-touch.json
crates/bevy_window/src/: lib.rs  system.rs
crates/bevy_xr/: Cargo.toml
crates/bevy_xr/src/: interaction.rs  lib.rs  presentation.rs
examples/: README.md
examples/2d/: mesh2d_manual.rs
examples/3d/: spherical_area_lights.rs
examples/app/: return_after_run.rs
examples/ecs/: iter_combinations.rs
examples/game/: breakout.rs
examples/games/: breakout.rs
examples/shader/: compute_shader_game_of_life.rs
examples/ui/: font_atlas_debug.rs
examples/window/: multiple_windows.rs  transparent_window.rs
examples/xr/: vr_cubes.rs
