[package]
name = "bevy_openxr"
version = "0.6.0"
edition = "2018"
authors = [
    "Bevy Contributors <bevyengine@gmail.com>",
    "Carter Anderson <mcanders1@gmail.com>",
]
description = "OpenXR presentation and input backend for Bevy Engine"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT"
keywords = ["bevy"]

[dependencies]
# bevy
bevy_app = { path = "../bevy_app", version = "0.6.0" }
bevy_ecs = { path = "../bevy_ecs", version = "0.6.0" }
bevy_log = { path = "../bevy_log", version = "0.6.0" }
bevy_math = { path = "../bevy_math", version = "0.6.0" }
bevy_utils = { path = "../bevy_utils", version = "0.6.0" }
bevy_xr = { path = "../bevy_xr", version = "0.6.0" }

# other
serde = "1"
ash = "0.34"
wgpu = "0.12"
wgpu-hal = { version = "0.12", features = ["vulkan"] }
thiserror = "1.0"
parking_lot = "0.11"

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.5.0"
# No official Khronos loader available for android, so load the one provided by the environment
openxr = { git = "https://github.com/Ralith/openxrs", default-features = false, features = ["loaded"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
openxr = { git = "https://github.com/Ralith/openxrs", default-features = false, features = ["static"] }
