[package]
name = "bevy_openxr"
version = "0.8.0-dev"
edition = "2018"
authors = [
    "Bevy Contributors <bevyengine@gmail.com>",
    "Carter Anderson <mcanders1@gmail.com>",
]
description = "OpenXR presentation and input backend for Bevy Engine"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT"
keywords = ["bevy"]

[dependencies]
# bevy
bevy_app = { path = "../bevy_app", version = "0.8.0-dev" }
bevy_ecs = { path = "../bevy_ecs", version = "0.8.0-dev" }
bevy_log = { path = "../bevy_log", version = "0.8.0-dev" }
bevy_math = { path = "../bevy_math", version = "0.8.0-dev" }
bevy_utils = { path = "../bevy_utils", version = "0.8.0-dev" }
bevy_xr = { path = "../bevy_xr", version = "0.8.0-dev" }
bevy_render = { path = "../bevy_render", version = "0.8.0-dev" }
bevy_core_pipeline = { path = "../bevy_core_pipeline", version = "0.8.0-dev" }
bevy_window = { path = "../bevy_window", version = "0.8.0-dev" }
bevy_transform = { path = "../bevy_transform", version = "0.8.0-dev" }
bevy_reflect = { path = "../bevy_reflect", version = "0.8.0-dev" }
bevy_hierarchy = { path = "../bevy_hierarchy", version = "0.8.0-dev" }

# other
serde = "1"
ash = "0.37.0+1.3.209"
wgpu = { version = "0.12", features = [
    "vulkan-portability",
], git = "https://github.com/gfx-rs/wgpu" }
wgpu-hal = { version = "0.12", features = [
    "vulkan",
], git = "https://github.com/gfx-rs/wgpu" }
thiserror = "1.0"
parking_lot = "0.11"

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.6.0"
# No official Khronos loader available for android, so load the one provided by the environment
openxr = { git = "https://github.com/Ralith/openxrs", default-features = false, features = [
    "loaded",
] }

[target.'cfg(not(any(target_os = "android", target_os = "macos")))'.dependencies]
openxr = { git = "https://github.com/Ralith/openxrs", default-features = false, features = [
    "static",
] }

[target.'cfg(target_os = "macos")'.dependencies]
openxr = { git = "https://github.com/Ralith/openxrs", default-features = false, features = [
    "loaded",
] }
