[package]
name = "bevy_openxr"
version = "0.9.0"
edition = "2018"
authors = [
    "Bevy Contributors <bevyengine@gmail.com>",
    "Carter Anderson <mcanders1@gmail.com>",
]
description = "OpenXR presentation and input backend for Bevy Engine"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT"
keywords = ["bevy"]

[features]
wip = []

[dependencies]
# bevy
bevy_app = { path = "../bevy_app", version = "0.9.0" }
bevy_ecs = { path = "../bevy_ecs", version = "0.9.0" }
bevy_log = { path = "../bevy_log", version = "0.9.0" }
bevy_math = { path = "../bevy_math", version = "0.9.0" }
bevy_utils = { path = "../bevy_utils", version = "0.9.0" }
bevy_xr = { path = "../bevy_xr", version = "0.9.0" }
bevy_render = { path = "../bevy_render", version = "0.9.0" }
bevy_core_pipeline = { path = "../bevy_core_pipeline", version = "0.9.0" }
bevy_window = { path = "../bevy_window", version = "0.9.0" }
bevy_transform = { path = "../bevy_transform", version = "0.9.0" }
bevy_reflect = { path = "../bevy_reflect", version = "0.9.0" }
bevy_hierarchy = { path = "../bevy_hierarchy", version = "0.9.0" }

# other
serde = "1"
ash = "0.37.0+1.3.209"
wgpu-hal = { version = "0.14.0", features = [
    "vulkan",
    # ], git = "https://github.com/gfx-rs/wgpu", rev="fa35c0a0f4aaae35ab3d129266199008d89928fa" }
    # ], git = "https://github.com/gfx-rs/wgpu", branch="v0.12" }
] }
thiserror = "1.0"
parking_lot = "0.11"

[target.'cfg(target_os = "linux")'.dependencies]
openxr = { version = "0.17.1", default-features = false, features = [
    "linked",
    "loaded",
] }

[target.'cfg(target_os = "android")'.dependencies]
# No official Khronos loader available for android, so load the one provided by the environment
openxr = { version = "0.17.1", default-features = false, features = ["loaded"] }


[target.'cfg(not(any(target_os = "android", target_os = "macos", target_os = "linux")))'.dependencies]
openxr = { version = "0.17.1", default-features = false, features = ["static"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
wgpu = { version = "0.14.0" }

[target.'cfg(target_os = "macos")'.dependencies]
openxr = { version = "0.17.1", default-features = false, features = ["static"] }
wgpu = { version = "0.14.0", features = ["vulkan-portability"] }
