[package]
name = "bevy_webxr"
version = "0.9.0"
edition = "2018"
authors = [
    "Bevy Contributors <bevyengine@gmail.com>",
    "Carter Anderson <mcanders1@gmail.com>",
]
description = "OpenXR presentation and input backend for Bevy Engine"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT"
keywords = ["bevy"]

[dependencies]
# bevy
bevy_app = { path = "../bevy_app", version = "0.9.0" }
bevy_ecs = { path = "../bevy_ecs", version = "0.9.0" }
bevy_log = { path = "../bevy_log", version = "0.9.0" }
bevy_math = { path = "../bevy_math", version = "0.9.0" }
bevy_utils = { path = "../bevy_utils", version = "0.9.0" }
bevy_xr = { path = "../bevy_xr", version = "0.9.0" }

# other
console_error_panic_hook = "0.1.7"
gloo-utils = "0.1.5"
js-sys = "0.3.60"
wasm-bindgen = "0.2.0"
wasm-bindgen-futures = "0.4.33"
wgpu = { version = "0.13.1", features = ["webgl"] }
raw-window-handle = "0.4.2"
web-sys = { version = "0.3", features = [
    "WebGl2RenderingContext",
    "HtmlCanvasElement",
    "Window",
    "Navigator",
    "XrBoundedReferenceSpace",
    "XrEye",
    "XrFrame",
    "XrHandedness",
    "XrInputSource",
    "XrInputSourceArray",
    "XrInputSourceEvent",
    "XrInputSourceEventInit",
    "XrInputSourcesChangeEvent",
    "XrInputSourcesChangeEventInit",
    "XrPose",
    "XrReferenceSpace",
    "XrReferenceSpaceEvent",
    "XrReferenceSpaceEventInit",
    "XrReferenceSpaceType",
    "XrRenderState",
    "XrRenderStateInit",
    "XrRigidTransform",
    "XrSession",
    "XrSessionEvent",
    "XrSessionEventInit",
    "XrSessionInit",
    "XrSessionMode",
    "XrSpace",
    "XrSystem",
    "XrTargetRayMode",
    "XrView",
    "XrViewerPose",
    "XrViewport",
    "XrVisibilityState",
    "XrWebGlLayer",
    "XrWebGlLayerInit",
] }
