[package]
name = "bevy_xr"
version = "0.8.0-dev"
edition = "2018"
authors = [
    "Bevy Contributors <bevyengine@gmail.com>",
    "Carter Anderson <mcanders1@gmail.com>",
]
description = "XR presentation and input interface for Bevy Engine"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT"
keywords = ["bevy"]

[dependencies]
# bevy
bevy_app = { path = "../bevy_app", version = "0.8.0-dev" }
bevy_core = { path = "../bevy_core", version = "0.8.0-dev" }
bevy_ecs = { path = "../bevy_ecs", version = "0.8.0-dev" }
bevy_math = { path = "../bevy_math", version = "0.8.0-dev" }
bevy_reflect = { path = "../bevy_reflect", version = "0.8.0-dev", features = [
    "bevy",
] }
bevy_utils = { path = "../bevy_utils", version = "0.8.0-dev" }

# other
downcast-rs = "1.2"
serde = "1"
wgpu = { version = "0.12", git = "https://github.com/gfx-rs/wgpu" }
